src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Address__c</fullName>
        <label>College_Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>College_Location__c</fullName>
        <label>College_Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <label>Exam Fees Submitted?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_Subjects__c</fullName>
        <label>Favourite_Subjects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C Language</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>DBMS</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Operating System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <label>Fees Submitted</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <label>Is Donation?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <label>Overall Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pass_Out_Year__c</fullName>
        <label>Pass_Out_Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone  Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resgistration_No__c</fullName>
        <label>Resgistration_No</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll_Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West Bengal</fullName>
                </value>
                <value>
                    <fullName>Jharkand</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student_Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Student_Url__c</fullName>
        <label>Student_Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back_2nd__c</fullName>
        <label>Subjects in which Back(2nd)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back_3rd__c</fullName>
        <label>Subjects in which Back(3rd)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back_4th__c</fullName>
        <label>Subjects in which Back(4th)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back__c</fullName>
        <label>Subjects in which Back</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Amount__c</fullName>
        <formula>Pending_Fees_Amount__c  +  Pending_Exam_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Pending_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_st_Sem_Percentage__c</fullName>
        <label>1 st Sem Percentage</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Back__c</fullName>
        <label>1st Sem Back?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Back__c</fullName>
        <label>2nd Sem Back?</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rdSem_Percentage__c</fullName>
        <label>3rdSem Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Back__c</fullName>
        <label>3rd Sem Back?</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Back__c</fullName>
        <label>4th Sem Back?</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Percentage__c</fullName>
        <label>4th Sem Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_of_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year of Class</label>
        <referenceTo>Year_of_Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Register</fullName>
        <active>false</active>
        <label>Register</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>